force-app/main/default/objects/Bill_of_Materials__c/Bill_of_Materials__c.object-meta.xml
<CustomObject>
    <label>Bill of Materials</label>
    <nameField>
        <displayFormat>BoM-{00000}</displayFormat>
        <label>Bill of Materials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills of Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>