force-app/main/default/objects/Bill_of_Materials__c/fields/Effectivity_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effectivity_End_Date__c</fullName>
    <label>Effectivity End Date</label>
    <type>Date</type>
</CustomField>