force-app/main/default/objects/Bill_of_Materials__c/fields/Effectivity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effectivity_Start_Date__c</fullName>
    <label>Effectivity Start Date</label>
    <type>Date</type>
</CustomField>