force-app/main/default/objects/Bill_of_Materials__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Bills of Materials</relationshipLabel>
    <relationshipName>Bills_of_Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>